--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Rocketseat</title>
-</head>
-<body>
-<<<<<<< HEAD
-    <h1>Curso Rocketseat</h1>
-=======
-    <h1>Curso de JavaScript</h1>
-<<<<<<< HEAD
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rocketseat</title>
+  </head>
 
-    
-=======
->>>>>>> baa7b329c5932e4712f6bddb242701fe56d6ae40
-    
-    <script src="/src/scripts/index.js"></script>
->>>>>>> 560f86fa4bc5f2e7c43201c1503d83d509cfdb7c
-</body>
+  <body>
+    <!--Isso é um comentário em HTML-->
+    <h1>Trilha Discover</h1>
+
+    <div
+      title="Definir um título"
+      class="carrinho"
+      contenteditable="true"
+      id="cart1"
+      tabindex="1"
+    >
+      Conteúdo
+    </div>
+    <div class="carrinho" data-id="" id="cart2" tabindex="2">Conteúdo</div>
+    <div class="carrinho" hidden tabindex="3">Conteúdo</div>
+
+    <script src="./src/js/index.js"></script>
+  </body>
 </html>
